sample-ingress/Nginx/sample-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"  
spec:
  rules:
  - host: "*.com" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quote
            port:
              number: 80
